<resources>
    <string name="app_name">Movies</string>

    <!-- Images -->
    <string name="poster">Poster</string>
    <string name="backdrop">Backdrop</string>
    <string name="background">Background</string>
    <string name="cancel">Cancel</string>
    <string name="icon">Icon</string>

    <!-- DiscoverMovie -->
    <string name="release_date">Release date: %1$s</string>

    <!-- MovieDescription -->
    <string name="vote_average">Vote average: %1$s</string>
    <string name="videos">Videos:</string>
    <string name="description">Description:</string>

    <!-- DrawerLayout -->
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="item_discover_movie">Discover Movie</string>
    <string name="item_settings">Settings</string>
    <string name="item_about">About</string>

    <!-- Dialog about -->
    <string name="dialog_about_message">Author: Miłosz Skalski\nE-mail: milosz.skalski@gmail.com\nVersion: %1$s\n\nThis app uses the tmdb api</string>
    <string name="dialog_about_close">Close</string>

    <!-- Dialogs -->
    <string name="clear">Clear</string>

    <!-- Options search -->
    <string name="genre">Genre</string>
    <string name="sort">Sort</string>
    <string name="none">None</string>

    <string name="not_available">As will soon be available</string><!-- todo remove this when implement -->
</resources>
