<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:scaleType="centerCrop"/>

    <ScrollView
        android:id="@+id/scrollMovieDescription"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.skala.videotrainingapp.view.AspectRatioImageView
                android:id="@+id/imageBackdrop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/backdrop"
                android:scaleType="centerCrop"
                app:aspectRatio="0.5625"
                app:aspectRatioEnabled="true"/>

            <LinearLayout
                android:id="@+id/padBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/description_movie_pad"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="clip_horizontal"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    tools:text="Title"/>

                <TextView
                    android:id="@+id/voteAverage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    tools:text="Vote average: 6.1"/>

                <TextView
                    android:id="@+id/releaseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    tools:text="Release date: 2016-08-03"/>

                <TextView
                    android:id="@+id/titleDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textAppearance="@android:style/TextAppearance.Large"/>

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    tools:text="Description"/>

                <TextView
                    android:id="@+id/titleVideos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/videos"
                    android:textAppearance="@android:style/TextAppearance.Large"/>

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/videos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:clipToPadding="false"
                android:padding="8dp"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>